--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/x-icon" href="/client/src/images/HMP-logo.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Heath Matthews Physio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
