--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" type="image/x-icon" href="/client/src/images/HMP-logo.png">
+    <link rel="icon" type="image/x-icon" href="./HMP-logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
